; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_index.c_check_file_directory_collision.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_index.c_check_file_directory_collision.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_ERROR_INDEX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"'%s' appears as both a file and a directory\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_5__*, i64, i32)* @check_file_directory_collision to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_file_directory_collision(i32* %0, %struct.TYPE_5__* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32*, i32** %6, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %12 = load i64, i64* %8, align 8
  %13 = load i32, i32* %9, align 4
  %14 = call i64 @has_file_name(i32* %10, %struct.TYPE_5__* %11, i64 %12, i32 %13)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %22, label %16

16:                                               ; preds = %4
  %17 = load i32*, i32** %6, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %19 = load i32, i32* %9, align 4
  %20 = call i64 @has_dir_name(i32* %17, %struct.TYPE_5__* %18, i32 %19)
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %16, %4
  %23 = load i32, i32* @GIT_ERROR_INDEX, align 4
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @git_error_set(i32 %23, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %26)
  store i32 -1, i32* %5, align 4
  br label %29

28:                                               ; preds = %16
  store i32 0, i32* %5, align 4
  br label %29

29:                                               ; preds = %28, %22
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i64 @has_file_name(i32*, %struct.TYPE_5__*, i64, i32) #1

declare dso_local i64 @has_dir_name(i32*, %struct.TYPE_5__*, i32) #1

declare dso_local i32 @git_error_set(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
